--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,5 +40,9 @@ markdown_extensions:
   - admonition
   - pymdownx.details
   - pymdownx.superfences:
+    - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 copyright: Copyright &copy; 2017 Ryan Jennings
