--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: Houses
-site_url: https://sitename.example
+site_name: HOUSES - The Games
+site_url: https://housesthegames.com
 theme:
   name: material
   
@@ -35,8 +35,7 @@ theme:
 
 extra_css:
   - stylesheets/extra.css
-    
-
+  
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
