--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: HOUSES
-site_url: https://housesthegames.com
+site_name: Houses - The Games
+site_url: housesthegames.com
 theme:
   name: material
   icon:
